--- a/rte-task/cmd/.env
+++ b/rte-task/cmd/.env
@@ -2,6 +2,6 @@
 	DB_user     = "postgres"
 	DB_port     = "5432"
 	DB_password = "password"
-	DB_dbname   = "rteTask"
+	DB_dbname   = "rtetask"
 	DB_localhost=":8080"
 	SECRET_KEY="vikkki"
