Changed into appropriate names and change the readme file

--- a/rte-task/cmd/.env
+++ b/rte-task/cmd/.env
@@ -1,7 +1,7 @@
-	DB_host     = "localhost"
-	DB_user     = "postgres"
-	DB_port     = "5432"
-	DB_password = "password"
-	DB_dbname   = "rtetask"
-	DB_localhost=":8080"
-	SECRET_KEY  ="secret-key"
+	DB_HOST     = "localhost"
+	DB_USER     = "postgres"
+	DB_PORT     = "5432"
+	DB_PASSWORD = "password"
+	DB_DBNAME   = "rtetask"
+	HTTP_PORT	= ":8080"
+	SECRET_KEY  = "secret-key"
