--- a/rte-task/.env
+++ b/rte-task/.env
@@ -2,7 +2,7 @@
 	DB_USER     = "postgres"
 	DB_PORT     = "5432"
 	DB_PASSWORD = "password"
-	DB_DBNAME   = "rtetask"
+	DB_NAME   = "rtetask"
 	HTTP_PORT	= ":8080"
 	SECRET_KEY  = "secret-key"
-	Log_File="pkg/loggers/logs.log"
+	LOG_FILE_PATH="pkg/loggers/logs.log"
